[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/shared/explosion.gd" type="Script" id=1]

[sub_resource type="SphereShape" id=7]

[node name="Explosion" type="Area"]
collision_layer = 0
collision_mask = 0
monitorable = false
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 7 )

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_Explosion_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Explosion_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
